2004-06-09 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b183

	* New: Add Link to Config Wizard for logged in Admins on Startpage

	* Change: Removed link on actual language flag according to:
		http://www.useit.com/alertbox/20031222.html # 10

	* Fix: Gallery didnt work when Users have NO language installed an PHP <= 4.2.0 and/or without gettext

	* Change: Moved Upload mode into group mandatory.

	* Change: Some little text changes in config.

2004-06-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b182

	* Change:  Add an 'uploadMode' option to config wizard to define which
	  method to default to for add_photos.

	* Fix:  Make sure that the user_version is set correctly for new users and for
	  the userdb to prevent the 'upgrading users' notice on a new install.

2004-06-08 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b181

	* Fix: Javascript for next/prev Tabs was not correct initialisized.
	  (Caught by Christian M.)

2004-06-07 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b180

	* New: Added Previous and Next Tab Javascrit in ConfigWizard

	* Change: CSS in Config and Jensskin

	* Change: Text when Gallery is unconfigured

2004-06-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b179

	* Change: Remove two references to configure_instructions.php

2004-06-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b178

	* Change: Switch image/album counter to the improved numAccessibleItems()

	* Change: Fix a pluralize_n2/ngettext issue.

2004-06-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b177

	* Change: Text updates to config wizard, cause wizard to forget Guid
	  if the resetadmin file is removed after it's set, remove bad require()

2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b176

	* Change: Enable session-based GUID checking for "resetadmin" as
	  suggested by bharat

	* Change: Re-ran manifest to get rid of the recently removed files,
	  and as a general version update.
