@@ -1,3 +1,11 @@
+2004-06-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b184
+
+	* Add:  Re-add secure.sh and configure.sh ... should never
+	  have removed them in the first place - they'll be necessary/nice
+	  for upgrades.  Also for security-minded people who want to chmod
+	  config.php and .htaccess to unwriteable states.  Modified secure.sh
+	  to not chmod 0 setup, and to remove setup/resetadmin if it's present.
+
 2004-06-09 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b183
 
 	* New: Add Link to Config Wizard for logged in Admins on Startpage
